--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,7 @@ rules:
   chai-friendly/no-unused-expressions: 2
   indent: [2, 2]
   import/no-extraneous-dependencies: 0
+  no-empty: 0
 globals:
   chai: true
   expect: true
