--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
@@ -46,8 +47,6 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "dedent": "^0.7.0",
-    "query-string": "6.2.0"
+    "axios": "0.18.0"
   }
 }
