--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "puppeteer": "^1.11.0"
   }
 }
