--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "karma-sinon-chai": "^2.0.2",
     "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
+    "puppeteer": "^1.11.0",
     "runjs": "^4.3.2",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
+    "standard-version": "^4.4.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "puppeteer": "^1.11.0"
+    "axios": "0.18.0"
   }
 }
