--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "engage-onsite-sdk-js",
-  "version": "0.0.0",
-  "main": "src/index.js",
+  "name": "@linx-impulse/engage-onsite-sdk-js",
+  "version": "0.0.0-alpha.7",
+  "main": "dist/index.js",
   "repository": "git@github.com:chaordic/engage-onsite-sdk-js.git",
   "author": "Ivanildo de Castro <ivanildo.decastro085@gmail.com>",
   "license": "MIT",
@@ -14,6 +14,10 @@
   "engines": {
     "node": ">= 10.8.0"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-transform-regenerator": "7.0.0",
@@ -46,7 +50,8 @@
     "sinon-chai": "^3.2.0",
     "standard-version": "^4.4.0",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "axios": "0.18.0"
