--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,26 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
       - image: circleci/node:10.14-browsers
     steps:
       - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run:
-          name: Yarn
+          name: Install dependencies
           command: yarn
       - run:
+          name: Run eslint
+          command: yarn run lint
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
           name: Test
-          command: npx run test
+          command: yarn run test -- --single-run
 
