--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:production": "webpack --config webpack.prod.js",
     "lint": "eslint .",
     "release": "standard-version",
-    "test:unit": "karma start"
+    "test": "karma start"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
