--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,6 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-transform-regenerator",
-    ["@babel/plugin-transform-runtime", {
-      "corejs": 2
-    }]
+    "@babel/plugin-transform-runtime"
   ]
 }
