--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,27 +1,15 @@
-extends: airbnb
+extends: airbnb-base
 env:
   browser: true
   es6: true
-  mocha: true
-plugins:
-  - chai-friendly
 rules:
   import/prefer-default-export: 0
-  no-unused-expressions: 0
-  chai-friendly/no-unused-expressions: 2
   indent: [2, 2]
   import/no-extraneous-dependencies: 0
   no-empty: 0
   no-else-return: ["error", { allowElseIf: true }]
   no-param-reassign: 0
-globals:
-  chai: true
-  expect: true
-  should: true
-  assert: true
-  sinon: true
-
 settings:
   import/resolver:
     webpack:
-      config: "webpack.config.js"
+      config: "webpack.common.js"
