--- a/package.json
+++ b/package.json
@@ -5,37 +5,31 @@
   "repository": "git@github.com:chaordic/engage-onsite-sdk-js.git",
   "author": "Ivanildo de Castro <ivanildo.decastro085@gmail.com>",
   "license": "MIT",
-  "runjs": {
-    "requires": [
-      "./node_modules/@babel/register",
-      "./node_modules/@babel/polyfill"
-    ]
-  },
   "engines": {
     "node": ">= 10.8.0"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "scripts": {
+    "build": "webpack --config webpack.dev.js",
+    "build:watch": "webpack --config webpack.dev.js --watch",
+    "build:production": "webpack --config webpack.prod.js",
+    "lint": "eslint .",
+    "release": "standard-version",
+    "test:unit": "karma start"
+  },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-regenerator": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime-corejs2": "7.1.5",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/runtime": "^7.8.7",
+    "@linx-impulse/commons-js": "4.2.1",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "karma": "^3.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -44,16 +38,13 @@
     "karma-sinon-chai": "^2.0.2",
     "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
-    "puppeteer": "^1.11.0",
     "runjs": "^4.3.2",
-    "sinon": "^6.3.5",
-    "sinon-chai": "^3.2.0",
+    "sinon": "^9.0.1",
+    "sinon-chai": "^3.5.0",
     "standard-version": "^4.4.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {
-    "axios": "0.18.0"
-  }
+  "dependencies": {}
 }
