docs: add annotations and setup esdoc

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "webpack --config webpack.dev.js",
     "build:watch": "webpack --config webpack.dev.js --watch",
     "build:production": "webpack --config webpack.prod.js",
+    "doc": "rm docs -rf; esdoc",
+    "doc:serve": "httpster --dir docs",
     "lint": "eslint .",
     "release": "standard-version",
     "test": "karma start"
@@ -24,12 +26,18 @@
     "@linx-impulse/commons-js": "4.2.1",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
+    "esdoc": "^1.1.0",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "esdoc-undocumented-identifier-plugin": "^1.0.0",
+    "esdoc-unexported-identifier-plugin": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
+    "httpster": "^1.0.4",
     "karma": "^3.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
